# my-tm

./: .gitignore  README.md  pyproject.toml
projects/: README.md
projects/example/: glossary.json
src/my_tm/: __main__.py
src/my_tm/config/: env.py  logger.py
src/my_tm/models/: chunk_model.py
src/my_tm/processors/: dict_tranlation_processor.py  gen_glossary_translation_processor.py  md_to_pdf_processor.py  mdfy_processor.py  output_md_processor.py  state_management_base.py  text_split_processor.py  translate_agent_processor.py
src/my_tm/processors/styles/: default.css
src/my_tm/utils/: data_utils.py  dict_utils.py  file_utils.py
